[package]
name = "pallet-dapps-staking"
authors = ["Diora Developer"]
description = "FRAME pallet to staking for dapps"
edition = "2021"
version = "3.9.0"

[dependencies]
parity-scale-codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
num-traits = { version = "0.2", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false, optional = true }
pallet-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false, optional = true }
scale-info = { version = "2.3.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.140", features = ["derive"], optional = true }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-staking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }

frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.38', default-features = false, optional = true }

[features]
default = ["std"]
std = [
    "serde",
    "parity-scale-codec/std",
    "scale-info/std",
    "num-traits/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-arithmetic/std",
    "sp-io/std",
    "sp-std/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
    "pallet-session/std",
    "pallet-timestamp/std",
    "sp-staking/std",
    "frame-benchmarking?/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]