[package]
name = "core-primitives"
authors = [ "Diora Developer" ]
description = "Primitives for session keys"
edition = "2021"
version = "0.1.0"

[dependencies]
nimbus-primitives = { git = "https://github.com/Diora-Network/nimbus", branch = "polkadot-v0.9.38", default-features = false }
parity-scale-codec = { version = "3.0.0", default-features = false, features = [ "derive" ] }
scale-info = { version = "2.3.1", default-features = false, features = [ "derive" ] }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }

[features]
default = [ "std" ]
std = [
	"nimbus-primitives/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-application-crypto/std",
	"sp-runtime/std",
]
