[package]
name = "node-template"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "node-template"

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
futures = { version = "0.3.21", features = ["thread-pool"] }
jsonrpsee = { version = "0.16.2", features = ["server"] }
serde_json = { workspace = true }
# Substrate
sc-basic-authorship = { workspace = true }
sc-cli = { workspace = true }
sc-client-api = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-aura = { workspace = true }
sc-consensus-grandpa = { workspace = true }
sc-executor = { workspace = true }
sc-network = { workspace = true }
sc-offchain = { workspace = true }
sc-rpc-api = { workspace = true }
sc-service = { workspace = true }
sc-telemetry = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sp-api = { workspace = true, features = ["default"] }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
sp-consensus-aura = { workspace = true, features = ["default"] }
sp-consensus-grandpa = { workspace = true, features = ["default"] }
sp-core = { workspace = true, features = ["default"] }
sp-inherents = { workspace = true, features = ["default"] }
sp-io = { workspace = true, features = ["default"] }
sp-keyring = { workspace = true }
sp-runtime = { workspace = true, features = ["default"] }
sp-timestamp = { workspace = true, features = ["default"] }
# Substrate Frame
frame-benchmarking = { workspace = true, features = ["default"] }
frame-benchmarking-cli = { workspace = true, features = ["default"] }
frame-system = { workspace = true, features = ["default"] }
pallet-transaction-payment = { workspace = true, features = ["default"] }
pallet-transaction-payment-rpc = { workspace = true }
substrate-frame-rpc-system = { workspace = true }

# Local Dependencies
node-template-runtime = { workspace = true, features = ["default"] }

# CLI-specific dependencies
try-runtime-cli = { workspace = true, optional = true }

# zklogin-support
zklogin-support = { path = "../primitives/zklogin-support", features = ["default"], optional = true }

hex = "0.4.3"

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[features]
default = []
# Dependencies that are only required if zksig benchmarking should be build.
runtime-benchmarks = [
    "sc-service/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "frame-benchmarking-cli/runtime-benchmarks",
    "frame-benchmarking/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "node-template-runtime/runtime-benchmarks",
    "zklogin-support"
]
# Enable features that allow the zksig to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = [
    "sp-runtime/try-runtime",
    "frame-system/try-runtime",
    "pallet-transaction-payment/try-runtime",
    "try-runtime-cli/try-runtime",
    "node-template-runtime/try-runtime",
]
