[package]
name = "extended-vnft-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gstd.workspace = true
log.workspace = true
sails-rs = { workspace = true, features = ["gtest"] }
parity-scale-codec.workspace = true
scale-info.workspace = true
vnft-service.workspace = true

[dev-dependencies]
env_logger.workspace = true
gclient.workspace = true
gtest.workspace = true
gear-core.workspace = true
extended_vnft_wasm = { path = "../wasm" }
tokio = "1"

[build-dependencies]
gwasm-builder.workspace = true
