[package]
name = "common"
version = "0.1.0"
authors = { workspace = true }
license = "BSD-4-Clause"
edition = "2021"

[dependencies]
codec = { features = [
	"derive",
], workspace = true }
scale-info = { features = [
	"derive",
], workspace = true }
frame-support.workspace = true
frame-system.workspace = true
sp-runtime.workspace = true

static_assertions = "1.1.0"

[features]
default = ['std']
std = [
    'codec/std',
    "scale-info/std",
    'frame-support/std',
    'frame-system/std',
    "sp-runtime/std",
]